@@ -6,3 +6,5 @@ Removed docs folder. @jers
 Added a proper README - modified all of the CAPS files. @jers
 Changed the INSTALL file. @jers
 Removed the .htaccess_example - It is now a part of INSTALL. @jers
+FroodParameters now implement Iterator @jers
+
